Fixed arrow covering up validation error message on second search box on home page

--- a/enrolment/static/sass/landing-page-desktop.scss
+++ b/enrolment/static/sass/landing-page-desktop.scss
@@ -51,7 +51,6 @@ button,
   border-width: 40px 40px 0px 40px;
   content: " ";
   display: block;
-  height: 40px;
   left: 50%;
   margin-left: -40px;
   position: absolute;
